fixed features spacing

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -148,6 +148,8 @@ body {
   margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
 
+
+
 /* Thin out the marketing headings */
 .featurette-heading {
   font-weight: 300;
@@ -206,6 +208,6 @@ body {
 
 @media (min-width: 992px) {
   .featurette-heading {
-    margin-top: 120px;
+    margin-top: 10px;
   }
 }
